--- a/RockPaperScissors2/app/src/main/AndroidManifest.xml
+++ b/RockPaperScissors2/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ResultsActivity"
+            android:label="@string/title_activity_results"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.wesleyreisz.rockpaperscissors.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
