Added Help Screen
This is the working example of adding the help screen. The resources
contains an image for the rules and the text will have to be added.

--- a/RockPaperScissors-homework/app/src/main/AndroidManifest.xml
+++ b/RockPaperScissors-homework/app/src/main/AndroidManifest.xml
@@ -23,6 +23,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <activity
+            android:name=".HelpActivity"
+            android:label="@string/title_activity_help"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.wesleyreisz.rockpaperscissors.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
